@@ -1,9 +1,8 @@
-
 data_library=/storage/SF.NET/BARTLBY/bartlby-core/mysql.so
 
 firebird_db=localhost:/storage/BARTLBY.FDB
 firebird_user=SYSDBA
-firebird_pass=123
+firebird_pass=124
 
 mysql_host=localhost
 mysql_user=root
@@ -20,6 +19,8 @@ agent_plugin_dir=/storage/SF.NET/BARTLBY/bartlby-plugins
 
 logfile=/var/log/bartlby
 basedir=/storage/SF.NET/BARTLBY/bartlby-core/
+user=klewan
+
 daemon=true
 
 shm_size=7
