@@ -16,6 +16,9 @@ $Source$
 
 
 $Log$
+Revision 1.6  2005/11/27 02:04:42  hjanuschka
+setuid/setgid for security and web ui
+
 Revision 1.5  2005/09/28 21:46:30  hjanuschka
 converted files to unix
 jabber.sh -> disabled core dumps -> jabblibs segfaults
@@ -65,6 +68,7 @@ CVS Header
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/stat.h>
+#include <pwd.h>
 
 
 
@@ -102,11 +106,19 @@ void bartlby_get_daemon(char * cfgfile) {
 	char pidfname[1024];
 	char pidstr[1024];
 	char * pid_def_name;
+	char * cfg_user;
+	struct passwd * ui;
+	
 	
 	
 	base_dir = getConfigValue("basedir", cfgfile);
 	pid_def_name = getConfigValue("pidfile_dir", cfgfile);
+	cfg_user = getConfigValue("user", cfgfile);
 	
+	if(cfg_user == NULL) {
+		_log("user not set in config file");
+		exit(2);			
+	}
 	
 	if(base_dir == NULL) {
 		
@@ -129,6 +141,16 @@ void bartlby_get_daemon(char * cfgfile) {
 	chdir(base_dir);
 	_log("basedir set to:%s", base_dir);
 	umask(0);
+	
+	ui=getpwnam(cfg_user);
+	if(ui == NULL) {
+		_log("User: %s not found cannot setuid running as %d", cfg_user, getuid());	
+	} else {
+		setuid(ui->pw_uid);
+		setgid(ui->pw_gid);
+		_log("User: %s/%d", ui->pw_name, ui->pw_gid);	
+	}
+	
 	sprintf(pidfname, "%s/bartlby.pid", pid_def_name);
 	pidfile=fopen(pidfname, "w");
 	if(pidfile == NULL) {
@@ -147,7 +169,7 @@ void bartlby_get_daemon(char * cfgfile) {
 		_log("setenv $BARTLBY_HOME='%s' failed", base_dir);	
 	}
 	
-	
+	free(cfg_user);
 	free(base_dir);
 	free(pid_def_name);
 	
